<resources>
    <string name="app_name">Khonsu</string>
    <string name="runtime_permissions_txt">"Application need your permission to access its features."</string>

    <!-- LAUNCHING ACTIVITY -->
    <string name="logo_description">App logo</string>

    <!-- HOME ACTIVITY -->
    <string name="home">Home</string>
    <string name="information_icon">Info</string>
    <string name="enter_location_hint">Enter your current location, i.e room number</string>
    <string name="enter_location_label">Location</string>
    <string name="location_submit_btn">Enter</string>
    <string name="guide_text">Scan a sticker or enter your location to start</string>
    <string name="camera_btn_description">Button to trigger Camera</string>
    <string name="updated_database">UPDATED_DATABASE</string>

    <!--AR RECOGNITION ACTIVITY -->
    <string name="finder_searching">Scanning…</string>

    <!-- MAP ACTIVITY -->
    <string name="pin_description">Navigator</string>
    <string name="map_description">Floor map</string>
    <string name="show_button">Show</string>
    <string name="sensor_not_detected">No sensor available</string>

    <!-- CUSTOM DIALOG -->
    <string name="info_icon">Info Icon</string>
    <string name="map_dialog_message">
        1. Always keep your phone parallel to the ground \n
        2. Click "Show" button to show possible destinations \n
        3. Choose one of destination to start tracking
    </string>
        <string name="home_dialog_message">
        Scan or enter your current location. If you enter your location manually, make sure you are at the entrance, i.e the door.
    </string>
    <string name="dialog_button">GOT IT</string>
    <string name="dialog_title">How to use?</string>
</resources>
