<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.a.khonsu.util.ZoomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map_layout_child"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                android:contentDescription="@string/map_description"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_navigation"
                android:id="@+id/imagePin"
                android:contentDescription="@string/pin_description"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:clipChildren="false"
                android:clipToPadding="false"/>
        </RelativeLayout>

    </com.example.a.khonsu.util.ZoomLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:background="@color/colorPrimary"
        android:text="@string/show_button"
        android:id="@+id/start_tracking_button"
        android:textColor="@android:color/white"/>
</RelativeLayout>