<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode ="true"
    android:clickable="true"
    tools:context="com.example.a.khonsu.view.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_photo_camera"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/camera_button"
        android:elevation="2dp"
        android:stateListAnimator="@anim/button_elevation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blueGrey700"
        android:text="@string/guide_text"
        android:textSize="30sp"
        android:id="@+id/guide_text"
        android:textAlignment="center"
        android:layout_marginBottom="84dp"
        android:layout_above="@+id/camera_button"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:hint="@string/enter_location_label">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_editText"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/location_submit_btn"
            android:background="@drawable/button_corner"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:id="@+id/location_submit_btn"/>
    </LinearLayout>
</RelativeLayout>
